Ajout de l'erreur moyenne et utilisation du profil horizontal

--- a/projet.ipynb
+++ b/projet.ipynb
@@ -9,49 +9,47 @@
     "import cv2\n",
     "import numpy as np\n",
     "import os\n",
-    "import csv"
+    "import csv\n",
+    "from scipy.signal import find_peaks, savgol_filter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def detect_steps(image):\n",
+    "\n",
     "    gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
-    "    blurred = cv2.GaussianBlur(gray, (5, 5), 0)\n",
-    "    equalized = cv2.equalizeHist(blurred)\n",
-    "    edges = cv2.Canny(equalized, 50, 150)\n",
-    "    lines = cv2.HoughLinesP(edges, 1, np.pi/180, threshold=120, minLineLength=100, maxLineGap=5)\n",
+    "    blurred = cv2.GaussianBlur(gray, (7, 7), 0)\n",
+    "    clahe = cv2.createCLAHE(clipLimit=3.0, tileGridSize=(8, 8))\n",
+    "    equalized = clahe.apply(blurred)\n",
+    "\n",
+    "    edges = cv2.Canny(equalized, 70, 140)\n",
+    "    horizontal_profile = np.sum(edges, axis=1)\n",
+    "\n",
+    "    window_size = max(11, int(image.shape[0] * 0.05) // 2 * 2 + 1)\n",
+    "    smoothed_profile = savgol_filter(horizontal_profile, window_length=window_size, polyorder=3)\n",
     "    \n",
-    "    horizontal_lines = []\n",
-    "    for line in lines:\n",
-    "        x1, y1, x2, y2 = line[0]\n",
-    "        angle = np.arctan2(y2 - y1, x2 - x1) * 180/np.pi\n",
-    "        if abs(angle) < 10:\n",
-    "            horizontal_lines.append(line)\n",
+    "    derivative = np.gradient(smoothed_profile)\n",
+    "\n",
+    "    pos_peaks, _ = find_peaks(derivative, prominence=np.percentile(derivative, 75), distance=gray.shape[0]//20)\n",
+    "    neg_peaks, _ = find_peaks(-derivative, prominence=np.percentile(-derivative, 75), distance=gray.shape[0]//20)\n",
+    "\n",
+    "    all_peaks = np.sort(np.concatenate([pos_peaks, neg_peaks]))\n",
+    "    valid_pairs = []\n",
     "    \n",
-    "    def group_lines(lines, threshold=20):\n",
-    "        grouped = []\n",
-    "        for line in lines:\n",
-    "            _, y1, _, y2 = line[0]\n",
-    "            y_center = (y1 + y2) / 2\n",
-    "            if not grouped:\n",
-    "                grouped.append([y_center, line])\n",
-    "            else:\n",
-    "                added = False\n",
-    "                for group in grouped:\n",
-    "                    if abs(y_center - group[0]) < threshold:\n",
-    "                        group.append(line)\n",
-    "                        added = True\n",
-    "                        break\n",
-    "                if not added:\n",
-    "                    grouped.append([y_center, line])\n",
-    "        return grouped\n",
+    "    for i in range(1, len(all_peaks)):\n",
+    "        prev_type = 'pos' if all_peaks[i-1] in pos_peaks else 'neg'\n",
+    "        curr_type = 'pos' if all_peaks[i] in pos_peaks else 'neg'\n",
+    "        \n",
+    "        # Une marche valide -> pic positif et negatif (peut etre faux)\n",
+    "        if prev_type == 'pos' and curr_type == 'neg':\n",
+    "            if (all_peaks[i] - all_peaks[i-1]) < gray.shape[0]/15:  # ecart maximal tolere\n",
+    "                valid_pairs.append((all_peaks[i-1], all_peaks[i]))\n",
     "    \n",
-    "    grouped_lines = group_lines(horizontal_lines)\n",
-    "    return len(grouped_lines)"
+    "    return len(valid_pairs)"
    ]
   },
   {
@@ -63,7 +61,92 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy : 5.95%\n",
+      "Image : Groupe2_Image1.jpeg | attendues : 4 | detectees : 11 | Correct : False | Erreur : 7 marches\n",
+      "Image : Groupe2_Image2.jpeg | attendues : 7 | detectees : 12 | Correct : False | Erreur : 5 marches\n",
+      "Image : Groupe2_Image3.jpeg | attendues : 9 | detectees : 10 | Correct : False | Erreur : 1 marches\n",
+      "Image : Groupe2_Image4.png | attendues : 6 | detectees : 13 | Correct : False | Erreur : 7 marches\n",
+      "Image : Groupe2_Image5.jpeg | attendues : 8 | detectees : 10 | Correct : False | Erreur : 2 marches\n",
+      "Image : Groupe2_Image6.jpeg | attendues : 10 | detectees : 7 | Correct : False | Erreur : 3 marches\n",
+      "Image : Groupe2_Image7.jpeg | attendues : 10 | detectees : 11 | Correct : False | Erreur : 1 marches\n",
+      "Image : Groupe2_Image11.jpg | attendues : 9 | detectees : 14 | Correct : False | Erreur : 5 marches\n",
+      "Image : Groupe2_Image12.png | attendues : 7 | detectees : 10 | Correct : False | Erreur : 3 marches\n",
+      "Image : Groupe2_Image13.png | attendues : 16 | detectees : 11 | Correct : False | Erreur : 5 marches\n",
+      "Image : t3i1.jpg | attendues : 11 | detectees : 11 | Correct : True | Erreur : 0 marches\n",
+      "Image : t3i2.jpg | attendues : 12 | detectees : 13 | Correct : False | Erreur : 1 marches\n",
+      "Image : t3i3.jpg | attendues : 7 | detectees : 13 | Correct : False | Erreur : 6 marches\n",
+      "Image : t3i4.jpg | attendues : 10 | detectees : 10 | Correct : True | Erreur : 0 marches\n",
+      "Image : t3i5.jpg | attendues : 5 | detectees : 11 | Correct : False | Erreur : 6 marches\n",
+      "Image : t3i6.jpg | attendues : 4 | detectees : 12 | Correct : False | Erreur : 8 marches\n",
+      "Image : t3i7.jpg | attendues : 22 | detectees : 9 | Correct : False | Erreur : 13 marches\n",
+      "Image : t3i8.jpg | attendues : 17 | detectees : 10 | Correct : False | Erreur : 7 marches\n",
+      "Image : t3i9.jpg | attendues : 21 | detectees : 12 | Correct : False | Erreur : 9 marches\n",
+      "Image : t3i10.jpg | attendues : 34 | detectees : 12 | Correct : False | Erreur : 22 marches\n",
+      "Image : t3i11.jpeg | attendues : 6 | detectees : 11 | Correct : False | Erreur : 5 marches\n",
+      "Image : t3i12.jpg | attendues : 5 | detectees : 12 | Correct : False | Erreur : 7 marches\n",
+      "Image : t3i13.jpg | attendues : 4 | detectees : 11 | Correct : False | Erreur : 7 marches\n",
+      "Image : t3i14.jpeg | attendues : 4 | detectees : 12 | Correct : False | Erreur : 8 marches\n",
+      "Image : t3i15.jpg | attendues : 5 | detectees : 10 | Correct : False | Erreur : 5 marches\n",
+      "Image : t3i16.png | attendues : 4 | detectees : 8 | Correct : False | Erreur : 4 marches\n",
+      "Image : t3i17.png | attendues : 3 | detectees : 8 | Correct : False | Erreur : 5 marches\n",
+      "Image : t3i18.png | attendues : 3 | detectees : 8 | Correct : False | Erreur : 5 marches\n",
+      "Image : t3i19.png | attendues : 4 | detectees : 8 | Correct : False | Erreur : 4 marches\n",
+      "Image : t3i20.png | attendues : 2 | detectees : 7 | Correct : False | Erreur : 5 marches\n",
+      "Image : t3i21.jpeg | attendues : 14 | detectees : 11 | Correct : False | Erreur : 3 marches\n",
+      "Image : t3i22.png | attendues : 7 | detectees : 10 | Correct : False | Erreur : 3 marches\n",
+      "Image : t3i23.jpg | attendues : 12 | detectees : 12 | Correct : True | Erreur : 0 marches\n",
+      "Image : t3i24.jpg | attendues : 10 | detectees : 11 | Correct : False | Erreur : 1 marches\n",
+      "Image : Groupe6_Image1.jpg | attendues : 15 | detectees : 10 | Correct : False | Erreur : 5 marches\n",
+      "Image : Groupe6_Image2.jpg | attendues : 7 | detectees : 11 | Correct : False | Erreur : 4 marches\n",
+      "Image : Groupe6_Image3.jpg | attendues : 11 | detectees : 11 | Correct : True | Erreur : 0 marches\n",
+      "Image : Groupe6_Image4.jpg | attendues : 9 | detectees : 12 | Correct : False | Erreur : 3 marches\n",
+      "Image : Groupe6_Image5.jpg | attendues : 7 | detectees : 9 | Correct : False | Erreur : 2 marches\n",
+      "Image : Groupe6_Image6.jpg | attendues : 9 | detectees : 14 | Correct : False | Erreur : 5 marches\n",
+      "Image : Groupe6_Image7.jpg | attendues : 7 | detectees : 12 | Correct : False | Erreur : 5 marches\n",
+      "Image : Groupe6_Image8.jpg | attendues : 10 | detectees : 10 | Correct : True | Erreur : 0 marches\n",
+      "Image : Groupe6_Image9.jpg | attendues : 10 | detectees : 8 | Correct : False | Erreur : 2 marches\n",
+      "Image : Groupe6_Image10.jpg | attendues : 8 | detectees : 13 | Correct : False | Erreur : 5 marches\n",
+      "Image : Groupe1_Image1.jpg | attendues : 11 | detectees : 9 | Correct : False | Erreur : 2 marches\n",
+      "Image : Groupe1_Image2.jpg | attendues : 8 | detectees : 8 | Correct : True | Erreur : 0 marches\n",
+      "Image : Groupe1_Image3.jpg | attendues : 13 | detectees : 6 | Correct : False | Erreur : 7 marches\n",
+      "Image : Groupe1_Image4.jpg | attendues : 12 | detectees : 9 | Correct : False | Erreur : 3 marches\n",
+      "Image : Groupe1_Image5.jpg | attendues : 12 | detectees : 12 | Correct : True | Erreur : 0 marches\n",
+      "Image : Groupe1_Image6.jpg | attendues : 6 | detectees : 11 | Correct : False | Erreur : 5 marches\n",
+      "Image : Groupe1_Image7.jpg | attendues : 6 | detectees : 9 | Correct : False | Erreur : 3 marches\n",
+      "Image : Groupe1_Image8.jpg | attendues : 17 | detectees : 10 | Correct : False | Erreur : 7 marches\n",
+      "Image : Groupe1_Image9.jpg | attendues : 9 | detectees : 9 | Correct : True | Erreur : 0 marches\n",
+      "Image : Groupe1_Image10.jpg | attendues : 15 | detectees : 9 | Correct : False | Erreur : 6 marches\n",
+      "Image : img1.png | attendues : 8 | detectees : 9 | Correct : False | Erreur : 1 marches\n",
+      "Image : img2.jpg | attendues : 10 | detectees : 9 | Correct : False | Erreur : 1 marches\n",
+      "Image : img3.png | attendues : 22 | detectees : 13 | Correct : False | Erreur : 9 marches\n",
+      "Image : img4.jpg | attendues : 37 | detectees : 13 | Correct : False | Erreur : 24 marches\n",
+      "Image : img5.jpg | attendues : 5 | detectees : 12 | Correct : False | Erreur : 7 marches\n",
+      "Image : img6.jpg | attendues : 11 | detectees : 14 | Correct : False | Erreur : 3 marches\n",
+      "Image : img7.png | attendues : 11 | detectees : 8 | Correct : False | Erreur : 3 marches\n",
+      "Image : img8.png | attendues : 10 | detectees : 10 | Correct : True | Erreur : 0 marches\n",
+      "Image : img9.png | attendues : 12 | detectees : 9 | Correct : False | Erreur : 3 marches\n",
+      "Image : grp7img10.jpg | attendues : 10 | detectees : 10 | Correct : True | Erreur : 0 marches\n",
+      "Image : grp7img11.jpg | attendues : 6 | detectees : 13 | Correct : False | Erreur : 7 marches\n",
+      "Image : grp7img12.jpg | attendues : 22 | detectees : 12 | Correct : False | Erreur : 10 marches\n",
+      "Image : Groupe5_image01.jpg | attendues : 9 | detectees : 11 | Correct : False | Erreur : 2 marches\n",
+      "Image : Groupe5_image02.jpg | attendues : 4 | detectees : 10 | Correct : False | Erreur : 6 marches\n",
+      "Image : Groupe5_image03.jpg | attendues : 38 | detectees : 12 | Correct : False | Erreur : 26 marches\n",
+      "Image : Groupe5_image04.jpg | attendues : 6 | detectees : 10 | Correct : False | Erreur : 4 marches\n",
+      "Image : Groupe5_image05.jpg | attendues : 7 | detectees : 10 | Correct : False | Erreur : 3 marches\n",
+      "Image : Groupe5_image06.jpg | attendues : 5 | detectees : 10 | Correct : False | Erreur : 5 marches\n",
+      "Image : Groupe5_image07.jpg | attendues : 11 | detectees : 14 | Correct : False | Erreur : 3 marches\n",
+      "Image : Groupe5_image08.jpg | attendues : 14 | detectees : 13 | Correct : False | Erreur : 1 marches\n",
+      "Image : Groupe5_image09.jpg | attendues : 8 | detectees : 10 | Correct : False | Erreur : 2 marches\n",
+      "Image : Groupe5_image10.jpeg | attendues : 14 | detectees : 12 | Correct : False | Erreur : 2 marches\n",
+      "Image : Groupe5_image11.jpeg | attendues : 13 | detectees : 11 | Correct : False | Erreur : 2 marches\n",
+      "Image : Groupe5_image12.jpeg | attendues : 15 | detectees : 10 | Correct : False | Erreur : 5 marches\n",
+      "Image : Groupe5_image13.jpeg | attendues : 3 | detectees : 10 | Correct : False | Erreur : 7 marches\n",
+      "Image : Groupe5_image14.jpeg | attendues : 4 | detectees : 12 | Correct : False | Erreur : 8 marches\n",
+      "Image : Groupe5_image15.jpeg | attendues : 8 | detectees : 12 | Correct : False | Erreur : 4 marches\n",
+      "Image : Groupe5_image16.jpeg | attendues : 10 | detectees : 8 | Correct : False | Erreur : 2 marches\n",
+      "Image : Groupe5_image17.jpeg | attendues : 13 | detectees : 13 | Correct : True | Erreur : 0 marches\n",
+      "Image : Groupe5_image18.jpeg | attendues : 8 | detectees : 10 | Correct : False | Erreur : 2 marches\n",
+      "Accuracy : 13.10%\n",
+      "Erreur moyenne (MAE) : 4.63 marches\n",
       "Resultats dans resultats.csv\n"
      ]
     }
@@ -76,6 +159,7 @@
     "results = []\n",
     "correct_predictions = 0\n",
     "total_predictions = 0\n",
+    "total_error = 0\n",
     "\n",
     "with open(csv_file, mode='r', encoding='utf-8') as file:\n",
     "    reader = csv.reader(file)\n",
@@ -90,7 +174,6 @@
     "        \n",
     "        image_name = row[0]\n",
     "        expected = int(row[1])\n",
-    "\n",
     "        image_path = os.path.join(image_folder, image_name)\n",
     "        if not os.path.exists(image_path):\n",
     "            #print(f\"Erreur : fichier introuvable {image_name}, pas bien :(\")\n",
@@ -100,24 +183,28 @@
     "        image = cv2.imread(image_path)\n",
     "        pred = detect_steps(image)\n",
     "\n",
-    "        is_correct = pred == expected\n",
+    "        error = abs(pred - expected)\n",
+    "        total_error += error\n",
+    "        is_correct = (error == 0)\n",
     "        if is_correct:\n",
     "            correct_predictions += 1\n",
     "        total_predictions += 1\n",
-    "        results.append([image_name, expected, pred, is_correct])\n",
-    "        #print(f\"Image : {image_name} | attendues : {expected} | detectees : {pred} | Correct : {is_correct}\")\n",
+    "        results.append([image_name, expected, pred, is_correct, error])\n",
+    "        print(f\"Image : {image_name} | attendues : {expected} | detectees : {pred} | Correct : {is_correct} | Erreur : {error} marches\")\n",
     "\n",
-    "# calcule accuracy\n",
+    "# calcule accuracy et de l'erreur\n",
     "if total_predictions > 0:\n",
-    "    accuracy = correct_predictions / total_predictions\n",
+    "    accuracy = correct_predictions/total_predictions\n",
+    "    mean_error = total_error/total_predictions\n",
     "    print(f\"Accuracy : {accuracy * 100:.2f}%\")\n",
+    "    print(f\"Erreur moyenne (MAE) : {mean_error:.2f} marches\")\n",
     "else:\n",
     "    print(\"C nul\")\n",
     "\n",
     "# sauvegarde\n",
     "with open(output_csv, mode='w', newline='', encoding='utf-8') as file:\n",
     "    writer = csv.writer(file)\n",
-    "    writer.writerow(['Image', 'Marches attendues', 'Marches detectees', 'Correct'])\n",
+    "    writer.writerow(['Image', 'Marches attendues', 'Marches detectees', 'Correct', 'Erreur'])\n",
     "    writer.writerows(results)\n",
     "print(f\"Resultats dans {output_csv}\")\n"
    ]
