--- a/projet.ipynb
+++ b/projet.ipynb
@@ -148,7 +148,7 @@
     }
    ],
    "source": [
-    "image_folder = 'images'\n",
+    "image_folder = 'images/train'\n",
     "csv_file = 'data annotations - Feuille 1.csv'\n",
     "debug = True\n",
     "save = True\n",
